Remove deprecated `getGraphResources` method