@@ -23,6 +23,7 @@ import org.assertj.core.api.SoftAssertions;
 import org.assertj.core.api.junit.jupiter.SoftAssertionsExtension;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.neo4j.gds.GraphParameters;
 import org.neo4j.gds.NodeLabel;
 import org.neo4j.gds.RelationshipType;
 import org.neo4j.gds.api.DatabaseId;
@@ -30,12 +31,12 @@ import org.neo4j.gds.api.Graph;
 import org.neo4j.gds.api.GraphName;
 import org.neo4j.gds.api.GraphStore;
 import org.neo4j.gds.api.User;
-import org.neo4j.gds.config.AlgoBaseConfig;
+import org.neo4j.gds.core.loading.validation.GraphStoreValidation;
 import org.neo4j.gds.extension.GdlExtension;
 import org.neo4j.gds.extension.GdlGraph;
 import org.neo4j.gds.extension.Inject;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 
@@ -73,14 +74,13 @@ class GraphStoreCatalogServiceGetGraphTest {
         when(graphStoreWithConfigMock.graphStore()).thenReturn(graphStore);
         doReturn(graphStoreWithConfigMock).when(serviceSpy).get(any(), any());
 
-        var configMock = mock(AlgoBaseConfig.class);
-        when(configMock.nodeLabelsFilter()).thenReturn(Collections.emptySet());
-        when(configMock.projectAllRelationshipTypes()).thenReturn(true);
+        var graphParameters  = new GraphParameters(Set.of(),Set.of(),true,Optional.empty());
 
         var graphResources = serviceSpy.getGraphResources(
             GraphName.parse("bogus"),
-            configMock,
+            graphParameters,
             Optional.empty(),
+            mock(GraphStoreValidation.class),
             Optional.empty(),
             Optional.empty(),
             new User("bogusUser", false),
@@ -118,14 +118,18 @@ class GraphStoreCatalogServiceGetGraphTest {
         when(graphStoreWithConfigMock.graphStore()).thenReturn(graphStore);
         doReturn(graphStoreWithConfigMock).when(serviceSpy).get(any(), any());
 
-        var configMock = mock(AlgoBaseConfig.class);
-        when(configMock.nodeLabelsFilter()).thenReturn(Set.of(NodeLabel.of("N")));
-        when(configMock.projectAllRelationshipTypes()).thenReturn(true);
+        var graphParameters  = new GraphParameters(
+            Set.of(NodeLabel.of("N")),
+            List.of(),
+            true,
+            Optional.empty()
+        );
 
         var graphResources = serviceSpy.getGraphResources(
             GraphName.parse("bogus"),
-            configMock,
+            graphParameters,
             Optional.empty(),
+            mock(GraphStoreValidation.class),
             Optional.empty(),
             Optional.empty(),
             new User("bogusUser", false),
@@ -163,14 +167,18 @@ class GraphStoreCatalogServiceGetGraphTest {
         when(graphStoreWithConfigMock.graphStore()).thenReturn(graphStore);
         doReturn(graphStoreWithConfigMock).when(serviceSpy).get(any(), any());
 
-        var configMock = mock(AlgoBaseConfig.class);
-        when(configMock.nodeLabelsFilter()).thenReturn(Collections.emptySet());
-        when(configMock.relationshipTypesFilter()).thenReturn(Set.of(RelationshipType.of("T")));
+        var graphParameters  = new GraphParameters(
+            Set.of(),
+            Set.of(RelationshipType.of("T")),
+            false,
+            Optional.empty()
+        );
 
         var graphResources = serviceSpy.getGraphResources(
             GraphName.parse("bogus"),
-            configMock,
+            graphParameters,
             Optional.empty(),
+            mock(GraphStoreValidation.class),
             Optional.empty(),
             Optional.empty(),
             new User("bogusUser", false),
@@ -209,14 +217,18 @@ class GraphStoreCatalogServiceGetGraphTest {
         when(graphStoreWithConfigMock.graphStore()).thenReturn(graphStore);
         doReturn(graphStoreWithConfigMock).when(serviceSpy).get(any(), any());
 
-        var configMock = mock(AlgoBaseConfig.class);
-        when(configMock.nodeLabelsFilter()).thenReturn(Set.of(NodeLabel.of("N")));
-        when(configMock.relationshipTypesFilter()).thenReturn(Set.of(RelationshipType.of("T")));
+        var graphParameters  = new GraphParameters(
+            Set.of(NodeLabel.of("N")),
+            Set.of(RelationshipType.of("T")),
+            false,
+            Optional.empty()
+        );
 
         var graphResources = serviceSpy.getGraphResources(
             GraphName.parse("bogus"),
-            configMock,
+            graphParameters,
             Optional.empty(),
+            mock(GraphStoreValidation.class),
             Optional.empty(),
             Optional.empty(),
             new User("bogusUser", false),
@@ -255,15 +267,20 @@ class GraphStoreCatalogServiceGetGraphTest {
         when(graphStoreWithConfigMock.graphStore()).thenReturn(graphStore);
         doReturn(graphStoreWithConfigMock).when(serviceSpy).get(any(), any());
 
-        var configMock = mock(AlgoBaseConfig.class);
-        when(configMock.nodeLabelsFilter()).thenReturn(Set.of(NodeLabel.of("N")));
-        when(configMock.projectAllRelationshipTypes()).thenReturn(false);
-        when(configMock.relationshipTypes()).thenReturn(Collections.emptyList());
+
+
+        var graphParameters  = new GraphParameters(
+            Set.of(NodeLabel.of("N")),
+            Set.of(),
+            false,
+            Optional.empty()
+        );
 
         var graphResources = serviceSpy.getGraphResources(
             GraphName.parse("bogus"),
-            configMock,
+            graphParameters,
             Optional.empty(),
+            mock(GraphStoreValidation.class),
             Optional.empty(),
             Optional.empty(),
             new User("bogusUser", false),
